# Datalog-Interpreter

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  Header.cpp  Header.h  IdAutomaton.cpp  IdAutomaton.h  Instruction Manual Score.doc  Interpreter.cpp  Interpreter.h  LeftParenAutomaton.h  LeftPatrenAutomaton.cpp  Lexer.cpp  Lexer.h  MOCK_DATA.json  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  Q-MarkAutomaton.cpp  Q-MarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  README.md  Relation.cpp  (+22 more)
project3-exampleIO/: in41.txt
